<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/settings_back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_left"
        app:tint="@color/light_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_settings_title" />

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="16dp"
        android:textColor="@color/light_text_primary"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/auth_user"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_item_background"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title">


        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_gravity="center_vertical"
                android:text="@string/phoneNum"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phoneNum_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/nonebind"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_divider" />


        <LinearLayout
            android:id="@+id/ll_passw"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/password"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/passw_set"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/noneset"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/auth_trans"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/menu_item_background"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/auth_user">


        <LinearLayout
            android:id="@+id/ll_trans"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_gravity="center_vertical"
                android:text="@string/transCount"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/noneAuth"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_divider" />


        <LinearLayout
            android:id="@+id/ll_real"
            android:layout_height="40dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/realNameAuth"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:text="@string/noneAuth"
                android:textColor="@color/light_text_primary"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_arrow_right" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/menu_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/switchCount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:text="@string/swicthCount"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"/>

        <View
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/light_divider" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:text="@string/logout"
            android:textColor="@color/black"/>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
