<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/password_back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arrow_left"
        app:tint="@color/light_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_password_title" />

    <TextView
        android:id="@+id/tv_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPassw"
        android:layout_marginTop="16dp"
        android:textColor="@color/light_text_primary"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_title">

        <!-- 新密码输入框 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/password_input_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/passwInput"
                android:textColorHint="@color/light_text_secondary"
                android:textColor="@color/light_text_primary"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/iv_password_visibility_1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_eye_off"
                app:tint="@color/light_text_secondary" />

        </LinearLayout>

        <!-- 确认密码输入框 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/password_input_background"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/passwAgain"
                android:textColorHint="@color/light_text_secondary"
                android:textColor="@color/light_text_primary"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/iv_password_visibility_2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_eye_off"
                app:tint="@color/light_text_secondary" />

        </LinearLayout>

        <!-- 密码要求提示 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setpasswhint"
            android:textColor="@color/light_text_secondary"
            android:textSize="14sp"
            android:layout_marginBottom="32dp" />

        <!-- 完成按钮 -->
        <Button
            android:id="@+id/btn_complete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
